fixing dark mode.

--- a/Version2 - Using redux toolkit/src/App.css
+++ b/Version2 - Using redux toolkit/src/App.css
@@ -3,6 +3,22 @@
   padding: 0;
 }
 
+body {
+  height: 100vh;
+}
+
+#root {
+  height: 100%;
+}
+
+center {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 button {
   width: 150px;
 }
